Changes in 0.x.x (released on November xx, xxxx)
----------------------------------------------------------------

- Renamed ckRend_Shader::setUniformCol3x255 to setUniformCol3
- Renamed ckRend_Shader::setUniformCol4x255 to setUniformCol4
- Renamed ckRend_Shader::setAttribCol3x255 to setAttribCol3
- Renamed ckRend_Shader::setAttribCol4x255 to setAttribCol4

Changes in 0.8.5 (released on November 11, 2009)
----------------------------------------------------------------

- Renamed the name of the module to Catcake
- Renamed the prefix from 'pg' to 'ck'
- Renamed getLastDesc to getLastDescendant
- Removed PyPogolyn
- Modified ckID::genID and ckID_ macro
- Suspended support for iPhone
- Modified the sample #10 to hide the mouse cursor
- Stopped support for MinGW
- Upgraded libpng to version 1.2.40
- Upgraded FreeType to version 2.3.11


Changes in 0.8.0 (released on August 15, 2009)
----------------------------------------------------------------

- Fixed PG_NO_THROW_EXCEPTION build option
- Renamed all the methods along the new coding-rule
- Added pgMotData, the motion data class
- Added pgMot, the motion-playing class
- Added pgUtil::loadPixelArtModel and pgUtil::loadPixelArtModelAs
- Added the sample #12
- Stopped support for iPhone OS 1.x
- Renamed the classes of all the samples
- Removed pgKeyMgr::KEY_CAPSLOCK and pgKeyMgr::KEY_NUMLOCK
- Changed the way to handle key-input for Linux
- Upgraded Doxygen to version 1.5.8


Changes in 0.7.0 (released on February 28, 2009)
----------------------------------------------------------------

- Added support for iPhone toolchain 2.0 (contributed by Takuro Noda)
- Upgraded FreeType to version 2.3.8
- Upgraded libpng to version 1.2.35
- Added support for playing sounds on Linux (contributed by Akihiro Komori)
- Added the sample #11
- Changed pgReadLittleEndian and pgWriteLittleEndian
- Changed the sample #10
- Changed pgSndMgr and the sample #6
- Fixed a memory leak in pgMemMgr
- Added pgID_ macro
- Changed pgID