@@ -31,43 +31,55 @@
 
 /*!
     @ingroup ckSys
-    TODO
+    Reads the specified data in little endian.
+    @param[in] data The data.
+    @param[in] type The class type.
 */
 #define ckReadLittleEndian(data, type) ckSysMgr::readLittleEndianForSystem<type>(data)
 
 /*!
     @ingroup ckSys
-    TODO
+    Writes the specified data in little endian.
+    @param[out] dest The destination.
+    @param[in] value The value to be written.
+    @param[in] type The class type.
 */
 #define ckWriteLittleEndian(dest, value, type) ckSysMgr::writeLittleEndianForSystem<type>(dest, value)
 
 
 /*!
     @ingroup ckSys
-    TODO
+    Creates all the managers of Catcake.
+    @param[in] title The title of the application.
+    @param[in] width The width of the framebuffer.
+    @param[in] height The height of the framebuffer.
+    @param[in] aim_fps The aim fps.
+    @param[in] sys_flag System flag.
 */
 CK_API void ckCreateCatcake(const char* title, u16 width, u16 height, u16 aim_fps, u16 sys_flag = 0);
 
 /*!
     @ingroup ckSys
-    TODO
+    Destroys all the managers of Catcake.
 */
 CK_API void ckDestroyCatcake();
 
 /*!
     @ingroup ckSys
-    TODO
+    Starts the main loop of Catcake.
 */
 CK_API void ckStartCatcake();
 
 /*!
     @ingroup ckSys
-    TODO
+    Ends the application.
 */
 CK_API void ckEndCatcake();
 
 /*!
     @ingroup ckSys
-    TODO
+    Raise an error.
+    @param msg An error message.
+    @param ... Additional arguments.
 */
 CK_API void ckError(const char* msg, ...);
